[package]
name = "traffic-by-ip-exporter"
version = "0.1.0"
authors = ["Luis Felipe Domínguez Vega <ldominguezvega@gmail.com>"]
edition = "2018"

[dependencies]
pcap = "0.11.0"
prometheus_exporter_base = "1.4.0"
pnet = "0.33.0"
env_logger = "0.10.0"
log = "0.4.17"
clap = "4.3.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
